# c-advanced

Assignment 1 - bankrekening/: Bankrekening.cpp  Bankrekening.h  CMakeLists.txt  TranactionHistory.cpp  TranactionHistory.h  Transaction.cpp  Transaction.h  main.cpp
Assignment 2 - decorator pattern/: CMakeLists.txt  Decorator.cpp  Decorator.h  Elf.cpp  Elf.h  FarmerDecorator.cpp  FarmerDecorator.h  NPC.cpp  NPC.h  Orc.cpp  Orc.h  ShamanDecorator.cpp  ShamanDecorator.h  SoldierDecorator.cpp  SoldierDecorator.h  main.cpp
Assignment 3 - Templates/: CMakeLists.txt  Queue.h  main.cpp
Assignment 4 - STL/: CMakeLists.txt  main.cpp
Assignment 5 - Game of Life/: CMakeLists.txt  Cell.cpp  Cell.h  Vector2.cpp  Vector2.h  main.cpp
Assignment 6 - Producer-consumer/: CMakeLists.txt  main.cpp
Assignment 7 - thread-safe Inventory/: CMakeLists.txt  main.cpp
Assignment 8 - Moving blocks/: Block.cpp  Block.h  CMakeLists.txt  main.cpp
Assignment 9 -Moving paremts and children/: CMakeLists.txt  Child.cpp  Child.h  Parent.cpp  Parent.h  main.cpp
